Project file structure
Forwarding files in _index.scss file in every directory, and using namespaces.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SASS Setup</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
     <header>
-      <h1>Audi Homepage</h1>
+      <h1>The quick brown fox jums over lazy dog</h1>
+
+      <nav>
+        <ul>
+          <li>HOMEPAGE</li>
+          <li>ABOUT US</li>
+          <li>PRODUCTS</li>
+        </ul>
+
+        <button>CONTACT US</button>
+      </nav>
+    
     </header>
     
     <main>
