Colours and Typografhy done
I finished everything for typo and colours.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <h1>The quick brown fox jums over lazy dog</h1>
 
-      <nav>
+      <!-- <nav>
         <ul>
           <li>HOMEPAGE</li>
           <li>ABOUT US</li>
@@ -20,8 +20,12 @@
         </ul>
 
         <button>CONTACT US</button>
-      </nav>
+      </nav> -->
     
+      <h1>Ha jedan</h1>
+      <h2>Ha dva</h2>
+      <h3>Ha tri</h3>
+      <h4>Ha cetri</h4>
     </header>
     
     <main>
