--- a/index.html
+++ b/index.html
@@ -59,15 +59,23 @@
     </div>
     
     <div class="about">
-      <div class="row">
-        <div class="col-12-xs col-12-sm col-6-xl">
-
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-12-xs col-12-sm col-6-xl">
+            <img src="img/about-us-section.png" alt="about-us-section" class="mt-60">
+            <img src="img/car-bg.png" alt="car-bg" class="bg-image">
+          </div>
+  
+          <div class="col-12-xs col-12-sm col-6-xl">
+            <div class="text mt-60">
+              <p class="title text-bright-red">ABOUT Q8</p>
+            <h2 class="mt-15 mb-35">Welcome to the 8th dimension. The new Audi Q8</h2>
+            <p class="large-text mb-20">With its imposing single frame in octagonal design, the Audi Q8 presents the new face of the Q family.</p>
+            <p class="text-medium-gray">The radiator grille combines with the forward-mounted spoiler and the strongly contoured air inlets to underline its confident look.</p>
+            </div>
+          </div>
         </div>
-
-        <div class="col-12-xs col-12-sm col-6-xl">
-          <p class="title">ABOUT Q8</p>
-        </div>
-      </div>
+      </div>  
     </div>
     
 
