--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="hero-slider">
           <div class="slider">
             <img src="img/bg-image.png" alt="Slide 1">
-            <img src="img/slider-image.png" alt="Slide 2">
+            <img src="img/featured-image.png" alt="Slide 2">
             <img src="img/test.png" alt="Slide 3">
           </div>
           <div class="slider-controls">
@@ -69,13 +69,53 @@
           <div class="col-12-xs col-12-sm col-6-xl">
             <div class="text mt-60">
               <p class="title text-bright-red">ABOUT Q8</p>
-            <h2 class="mt-15 mb-35">Welcome to the 8th dimension. The new Audi Q8</h2>
-            <p class="large-text mb-20">With its imposing single frame in octagonal design, the Audi Q8 presents the new face of the Q family.</p>
-            <p class="text-medium-gray">The radiator grille combines with the forward-mounted spoiler and the strongly contoured air inlets to underline its confident look.</p>
+              <h2 class="mt-15 mb-35">Welcome to the 8th dimension. The new Audi Q8</h2>
+              <p class="large-text mb-20">With its imposing single frame in octagonal design, the Audi Q8 presents the new face of the Q family.</p>
+              <p class="text-medium-gray">The radiator grille combines with the forward-mounted spoiler and the strongly contoured air inlets to underline its confident look.</p>
             </div>
           </div>
         </div>
       </div>  
+    </div>
+
+    <div class="featured">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="content">
+            <p class="title text-bright-red">FEATURED</p>
+            <h2 class="mt-15 mb-20 text-white">Brand new The Audi RS Q8</h2>
+            <p class="small-text mb-40 text-white">The RS Q8 gives you the choice: depending on the selected equipment, its looks are even bolder and sportier to suit your personal ambitions.</p>
+
+            <div class="row gap-2">
+              <div class="col-12-xs col-12-sm col-4-xl">
+                <div class="featured-attribute text-white">
+                  <p class="cta-text mt-20">POWER OUTPUT</p>
+                  <h4 class = "my-20">441 kW</h4>
+                  <p class="small-text mb-20"><i>(600 hp)</i></p>
+                </div>
+              </div>
+  
+              <div class="col-12-xs col-12-sm col-4-xl">
+                <div class="featured-attribute text-white">
+                  <p class="cta-text mt-20">ACCELERATION</p>
+                  <h4 class = "my-20">3.8</h4>
+                  <p class="small-text mb-20"><i>seconds</i></p>
+                </div>
+              </div>
+  
+              <div class="col-12-xs col-12-sm col-4-xl">
+                <div class="featured-attribute text-white">
+                  <p class="cta-text mt-20">TORQUE</p>
+                  <h4 class = "my-20">800</h4>
+                  <p class="small-text mb-20"><i>Nm</i></p>
+                </div>
+              </div>
+              
+            </div>
+
+          </div>
+        </div>
+      </div>
     </div>
     
 
