All done, time for refactoring

--- a/index.html
+++ b/index.html
@@ -333,10 +333,53 @@
           </div>
         </div>
       </div>
+
+
+      <div class="contact-us">
+        <div class="container">
+          <div class="row">
+            <div class="col-12-xs col-12-sm col-7-xl">
+              <div class="content">
+                <p class="title text-bright-red mb-15">CONTACT US</p>
+                <h1 class="text-white">If you have any questions, don’t hesitate to contact us.</h1>
+              </div>
+            </div>
+
+            <div class="col-12-xs col-12-sm col-5-xl">
+              <form>
+                <div class="input-wrapper">
+                  <input type="text" name="name" placeholder="ENTER YOUR NAME" required>
+                </div>
+
+                <div class="input-wrapper">
+                  <input type="email" name="email" placeholder="ENTER YOUR EMAIL" required>
+                </div>
+
+                <div class="input-wrapper">
+                  <textarea name="message" placeholder="YOUR MESSAGE" required class="message"></textarea>
+                </div>
+                
+                <button class="ml-30"><p class="cta-text text-white">SUBMIT</p></button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer>
+      <div class="row">
+        <div class="col-12-xs col-12-sm col-10-xl">
+          <p class="cta-text text-light-gray">© 2020 EWASOFT. ALL RIGHTS RESERVED</p>
+        </div>
 
+        <div class="col-12-xs col-12-sm col-2-xl">
+          <div class="text-wrapper">
+            <p class="cta-text text-light-gray text-right">TERMS OF AGREEMENT</p>
+            <p class="cta-text text-light-gray text-right">PRIVACY POLICY</p>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script src="/js/script.js"></script> 
