Resposive correcting pretty much done

--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
           <div class="slider">
             <img src="img/bg-image.png" alt="Slide 1">
             <img src="img/featured-image.png" alt="Slide 2">
-            <img src="img/test.png" alt="Slide 3">
+            <img src="img/slider-image.jpg" alt="Slide 3">
           </div>
           <div class="slider-controls">
-            <button class="prev">&#10094;</button>
-            <button class="next">&#10095;</button>
+            <button class="prev"><img src="/icons/left-gray-arrow.png" alt="left-arrow" class="m-auto"></button>
+            <button class="next"><img src="/icons/right-gray-arrow.png" alt="left-arrow" class="m-auto"></button>
           </div>
         </div>
     </div>
    
 
-    <main>
+    <main> 
       <div class="about">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-12-xs col-12-sm col-6-xl">
+            <div class="col-12-xs col-12-sm col-6-lg col-6-xl">
               <div class="image-wrapper">
                 <img src="img/about-us-section.png" alt="about-us-section" class="main-image mt-60">
                 <img src="img/car-bg.png" alt="car-bg" class="bg-image">
               </div>
             </div>
     
-            <div class="col-12-xs col-12-sm col-6-xl">
+            <div class="col-12-xs col-12-sm col-6-lg col-6-xl">
               <div class="text mt-60">
                 <p class="title text-bright-red">ABOUT Q8</p>
                 <h2 class="mt-15 mb-35">Welcome to the 8th dimension. The new Audi Q8</h2>
@@ -379,7 +379,7 @@
             <p class="cta-text text-light-gray text-right">PRIVACY POLICY</p>
           </div>
         </div>
-      </div>
+      </div> 
     </footer>
 
     <script src="/js/script.js"></script> 
