--- a/index.html
+++ b/index.html
@@ -41,21 +41,26 @@
     </header>
     
     <div class="hero">
-        <div class="hero-content">
-          <h1>Welcome to Our Website</h1>
-          <p>Your tagline or introduction goes here.</p>
-        </div>
-        <div class="hero-slider">
-          <div class="slider">
-            <img src="img/bg-image.png" alt="Slide 1">
-            <img src="img/featured-image.png" alt="Slide 2">
-            <img src="img/slider-image.jpg" alt="Slide 3">
+      <div class="row">
+        <div class="col-12-xs col-12-sm col-12-lg col-12-xl">
+          <div class="hero-content">
+            <p class="title text-bright-red">NEW ARRIVAL  </p>
+            <h1 class="mt-15">Expectations put limitations on possibilities.</h1>
+            <p class="small-text text-medium-gray mt-40">The Audi Q8 offers a unique performance that blends sport and utility into a momentous SUV design.</p>
           </div>
-          <div class="slider-controls">
-            <button class="prev"><img src="/icons/left-gray-arrow.png" alt="left-arrow" class="m-auto"></button>
-            <button class="next"><img src="/icons/right-gray-arrow.png" alt="left-arrow" class="m-auto"></button>
+          <div class="hero-slider">
+            <div class="slider">
+              <img src="img/bg-image.png" alt="Slide 1">
+              <img src="img/featured-image.png" alt="Slide 2">
+              <img src="img/slider-image.jpg" alt="Slide 3">
+            </div>
+            <div class="slider-controls">
+              <button class="prev"><img src="/icons/left-gray-arrow.png" alt="left-arrow" class="m-auto"></button>
+              <button class="next"><img src="/icons/right-gray-arrow.png" alt="left-arrow" class="m-auto"></button>
+            </div>
           </div>
         </div>
+      </div>
     </div>
    
 
@@ -280,10 +285,10 @@
             <div class="row">
               <div class="col-12-xs col-12 sm col-4-xl">
                 <div class="info">
-                  <img src="img/product-card-audi-q3.png" alt="product-card-audi-q3">
+                  <img src="img/product-card-audi-q7.png" alt="product-card-audi-q3">
                   <img src="icons/new-icon.png" alt="new-icon" class="new-icon">
                   <p class="small-text text-light-gray mt-15">5 Seats, 4 Doors</p>
-                  <h4>Audi Q3 2020</h4>
+                  <h4>Audi Q7 2020</h4>
                   <button class="buy-button">
                     <p class="caption-text text-light-gray">Starting from</p>
                     <h4 class="text-white">39.999 €</h4>
