--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="hero-content">
             <p class="title text-bright-red">NEW ARRIVAL  </p>
             <h1 class="mt-15">Expectations put limitations on possibilities.</h1>
-            <p class="small-text text-medium-gray mt-40">The Audi Q8 offers a unique performance that blends sport and utility into a momentous SUV design.</p>
+            <p class="small-text text-light-gray mt-40 note">The Audi Q8 offers a unique performance that blends sport and utility into a momentous SUV design.</p>
           </div>
           <div class="hero-slider">
             <div class="slider">
